fix bug report being unclickable on small screens, fixed by adding z-index because transparent svg was covering the clickable area; numerous css tweaks

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -82,6 +82,12 @@ input {
   align-self: flex-start;
   font-size: clamp(0.9rem, 0.8182rem + 0.3636vw, 1rem);
   margin: 0;
+  padding: 4px 0;
+}
+
+hr {
+  height: 1px;
+  width: 100%;
 }
 
 .options {
@@ -98,6 +104,7 @@ input {
   justify-content: center;
   flex: 1 1 25%;
   align-items: baseline;
+  color: var(--primary-text);
 }
 
 .options input {
@@ -248,7 +255,8 @@ button#back {
   border: 1px solid hsl(0, 0%, 0%);
   border-radius: 5px;
   padding: 10px;
-  margin: 1em 2em;
+  margin: 1em auto;
+  width: 50%;
 }
 
 .ac-container {
@@ -423,7 +431,7 @@ ul.ac-list {
 }
 
 /* Error modal */
-.error-report {
+.bug-report-icon {
   position: absolute;
   top: 5%;
   right: 5%;
@@ -431,6 +439,7 @@ ul.ac-list {
   color: var(--warning-color);
   font-size: 1rem;
   cursor: pointer;
+  z-index: 10;
 }
 
 #bug-report {
@@ -451,6 +460,8 @@ ul.ac-list {
 #bug-report .modal {
   max-width: clamp(200px, 400px, 100%);
   height: clamp(200px, 300px, 100%);
+  display: flex;
+  flex-flow: row wrap;
 }
 
 .modal .close-button {
@@ -466,21 +477,30 @@ ul.ac-list {
   justify-content: center;
   text-align: center;
   width: 100%;
+  font-size: clamp(1rem, 0.5909rem + 1.8182vw, 1.5rem);
+  flex: 1 1 100%;
+  justify-content: space-evenly;
+  gap: 1em;
+  margin: 0;
+  align-items: center;
 }
 
 .modal textarea {
   width: 400px;
   height: 150px;
-  font-size: 1rem;
+  /* font-size: clamp(0.9rem, 0.8182rem + 0.3636vw, 1rem); */
 }
 .modal button {
   font-size: 1.2rem;
-  margin: 1em;
-  width: 50%;
   background-color: var(--secondary-color);
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  flex: 1 1 25%;
+  justify-content: center;
+  padding: 5px;
 }
 
 .modal button:hover {
